--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="/views/css/send-message.css">
   <link rel="stylesheet" href="/views/css/bonusTimeImage.css">
   <link rel="stylesheet" href="/views/css/passwordImage.css">
+  <link rel="stylesheet" href="/views/css/modal-notfound.css">
+  <link rel="stylesheet" href="/views/css/editable-input.css">
   <link rel="stylesheet" href="/views/css/logs.css">
 </head>
 <body>
