--- a/views/send-message.html
+++ b/views/send-message.html
@@ -32,11 +32,11 @@
         <label for="message">ข้อความ:</label>
 
           <div class="textarea-wrapper">
-            <textarea id="message" name="message" placeholder="พิมพ์ข้อความที่ต้องการส่ง ..." required></textarea>
+            <textarea id="message" name="message" placeholder="พิมพ์ข้อความที่ต้องการส่ง ..." style="font-family: 'Prompt', sans-serif;" required></textarea>
 
             <!-- ✅ ปุ่มอัปโหลดรูปแบบไอคอนในกล่อง -->
             <label for="imageUpload" class="image-upload-btn" title="เลือกรูปภาพ">
-              <img src="https://s.imgz.io/2025/10/19/pngwing.com-1f579652ac9c8637b.png" alt="เลือกรูปภาพ" style="width: 24px; height: 24px;">
+              <img src="https://s.imgz.io/2025/10/19/pngwing.com-1f579652ac9c8637b.png" alt="เลือกรูปภาพ" style="width: 30px; height: 30px;">
             </label>
             <div id="preview-image" class="preview-image" style="display: none;">
               <div class="image-preview-wrapper">
